sofia-rs/tui/src/chatwidget/snapshots/sofia_tui__chatwidget__tests__compaction_running.snap
---
source: tui/src/chatwidget/tests/compaction_tests.rs
expression: "normalize_compaction_snapshot(render_bottom_popup(&chat, 80))"
---
• Compacting context (<elapsed> • esc to interrupt)
  └ Making room to continue.


› Ask Sofia to do anything

  gpt-5.6-sol default · /tmp/project
